homepage html css with images

--- a/index.html
+++ b/index.html
@@ -1,74 +1,168 @@
 <!DOCTYPE html>
 <html lang="mn">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Бидний багийн HTML + CSS хичээлийн даалгавар" />
-  <meta name="author" content="Team Name" />
-  <meta name="keywords" content="HTML, CSS, Web, Homework, Responsive" />
-
-  <title>Манай Веб</title>
-
-  <!-- Favicon (optional) -->
-  <link rel="icon" href="images/favicon.png" />
-
-  <!-- Google Fonts (for typography later) -->
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mongolian&display=swap" rel="stylesheet" />
-
-  <!-- Link to external CSS -->
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Homepage - Coffee Hustlers</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
-  <header>
-    <h1>Манай Вебсайт</h1>
-    <nav>
-      <ul>
-        <li><a href="#home">Нүүр</a></li>
-        <li><a href="#about">Бидний тухай</a></li>
-        <li><a href="#media">Медиа</a></li>
-        <li><a href="#contact">Холбоо барих</a></li>
-      </ul>
-    </nav>
+  <!-- Header -->
+  <header class="header">
+    <div class="logo-menu">
+      <img src="images/coffee-logo.png" alt="Coffee Logo" class="logo">
+      <nav>
+        <ul class="nav-links">
+          <li>Меню</li>
+          <li>Миний захиалга</li>
+          <li>Сагс</li>
+        </ul>
+      </nav>
+    </div>
+    <div class="login-btn">
+      <span>Нэвтрэх</span>
+    </div>
   </header>
 
-  <main>
-    <section id="home">
-      <h2>Нүүр</h2>
-      <p>Энд танилцуулга текст орно...</p>
-    </section>
+  <!-- Hero Banner -->
+  <section class="hero">
+    <img src="images/coffee-banner.png" alt="Coffee Banner" style="width: 100%; display: block;">
+  </section>
 
-    <section id="about">
-      <h2>Бидний тухай</h2>
-      <p>Багийн гишүүдийн мэдээлэл, веб бүтээх зорилго гэх мэт...</p>
-    </section>
+<!-- Filters -->
+<section class="filters">
+    <form class="dropdowns">
+      <label>
+        <select>
+          <option>CoffeeShop</option>
+        </select>
+      </label>
+      <label>
+        <select>
+          <option>Салбар</option>
+        </select>
+      </label>
+    </form>
+  
+    <fieldset class="categories">
+      <legend hidden>Filter categories</legend>
+      <label><input type="checkbox" checked> Coffee</label>
+      <label><input type="checkbox"> Smoothie</label>
+      <label><input type="checkbox"> Ice Tea/Ade</label>
+      <label><input type="checkbox"> Ice drink</label>
+      <label><input type="checkbox"> Hot drink</label>
+      <label><input type="checkbox"> Pastry</label>
+    </fieldset>
+  
+    <button class="regular-btn">Авдагаа авах</button>
+  </section>
+  
 
-    <section id="media">
-      <h2>Медиа</h2>
+  <!-- Product Grid -->
+  <section class="products">
+    <!-- Repeat this block for each item -->
+    <article class="product">
+      <img src="images/espresso.png" alt="Espresso Macchiato">
+      <p>Espresso Macchiato</p>
+      <span>6800₮</span>
+    </article>
+    <article class="product">
+        <img src="images/espresso.png" alt="Espresso Macchiato">
+        <p>Espresso Macchiato</p>
+        <span>6800₮</span>
+      </article>
+      <article class="product">
+        <img src="images/espresso.png" alt="Espresso Macchiato">
+        <p>Espresso Macchiato</p>
+        <span>6800₮</span>
+      </article>
+      <article class="product">
+        <img src="images/espresso.png" alt="Espresso Macchiato">
+        <p>Espresso Macchiato</p>
+        <span>6800₮</span>
+      </article>
+      <article class="product">
+        <img src="images/espresso.png" alt="Espresso Macchiato">
+        <p>Espresso Macchiato</p>
+        <span>6800₮</span>
+      </article>
+      <article class="product">
+        <img src="images/espresso.png" alt="Espresso Macchiato">
+        <p>Espresso Macchiato</p>
+        <span>6800₮</span>
+      </article>
+      <article class="product">
+        <img src="images/espresso.png" alt="Espresso Macchiato">
+        <p>Espresso Macchiato</p>
+        <span>6800₮</span>
+      </article>
+      <article class="product">
+        <img src="images/espresso.png" alt="Espresso Macchiato">
+        <p>Espresso Macchiato</p>
+        <span>6800₮</span>
+      </article>
+      <article class="product">
+        <img src="images/espresso.png" alt="Espresso Macchiato">
+        <p>Espresso Macchiato</p>
+        <span>6800₮</span>
+      </article>
+      <article class="product">
+        <img src="images/espresso.png" alt="Espresso Macchiato">
+        <p>Espresso Macchiato</p>
+        <span>6800₮</span>
+      </article>
+      <article class="product">
+        <img src="images/espresso.png" alt="Espresso Macchiato">
+        <p>Espresso Macchiato</p>
+        <span>6800₮</span>
+      </article>
+      <article class="product">
+        <img src="images/espresso.png" alt="Espresso Macchiato">
+        <p>Espresso Macchiato</p>
+        <span>6800₮</span>
+      </article>
+      <article class="product">
+        <img src="images/espresso.png" alt="Espresso Macchiato">
+        <p>Espresso Macchiato</p>
+        <span>6800₮</span>
+      </article>
+      <article class="product">
+        <img src="images/espresso.png" alt="Espresso Macchiato">
+        <p>Espresso Macchiato</p>
+        <span>6800₮</span>
+      </article>
+    <!-- Sold Out Example -->
+    <article class="product sold-out">
+      <img src="images/espresso.png" alt="Espresso Macchiato">
+      <p>Дууссан</p>
+      <span>Espresso Macchiato</span>
+      <span>6800₮</span>
+    </article>
+    <article class="product sold-out">
+        <img src="images/espresso.png" alt="Espresso Macchiato">
+        <p>Дууссан</p>
+        <span>Espresso Macchiato</span>
+        <span>6800₮</span>
+      </article>
+  </section>
 
-      <!-- Image -->
-      <img src="images/sample.jpg" alt="Жишээ зураг" width="100%" />
+  <!-- Cart Button -->
+  <div class="cart-icon">
+    <img src="images/cart-icon.png" alt="Cart">
+  </div>
 
-      <!-- Audio -->
-      <audio controls>
-        <source src="audio/sample.mp3" type="audio/mpeg" />
-        Таны хөтөч энэ аудио-г дэмжихгүй байна.
-      </audio>
-
-      <!-- Video -->
-      <video controls width="100%">
-        <source src="video/sample.mp4" type="video/mp4" />
-        Таны хөтөч энэ видео-г дэмжихгүй байна.
-      </video>
-    </section>
-
-    <section id="contact">
-      <h2>Холбоо барих</h2>
-      <p>email: example@example.com</p>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Манай Баг. Бүх эрх хуулиар хамгаалагдсан.</p>
+  <!-- Footer -->
+  <footer class="footer">
+    <div>
+      <h4>Бидний тухай</h4>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    </div>
+    <div><h4>Байршил</h4></div>
+    <div><h4>Холбогдох</h4></div>
   </footer>
 </body>
+
 </html>
