--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
       <img src="images/coffee-logo.png" alt="Coffee Logo" class="logo">
       <nav>
         <ul class="nav-links">
-          <li>Меню</li>
-          <li>Миний захиалга</li>
-          <li>Сагс</li>
+          <li><a href="Menu.html">Меню</a></li>
+          <li><a href="Order.html">Миний захиалга</a></li>
+          <li><a href="Cart.html">Сагс</a></li>
         </ul>
       </nav>
     </div>
     <div class="login-btn">
-      <span>Нэвтрэх</span>
+      <span><a href="Signup.html">Hэвтрэх</a></span>
     </div>
   </header>
 
@@ -151,8 +151,12 @@
 
   <!-- Cart Button -->
   <div class="cart-icon">
-    <img src="images/cart-icon.png" alt="Cart">
-  </div>
+    <a href= "cart.html">
+      <img src = "images/cart-icon.png" alt="Cart">
+    </a>
+  </div>div>
+  <!--Minii Zzahialga-->
+
 
   <!-- Footer -->
   <footer class="footer">
