--- a/index.html
+++ b/index.html
@@ -62,99 +62,101 @@
   
 
   <!-- Product Grid -->
-  <section class="products">
-    <!-- Repeat this block for each item -->
-    <article class="product">
-      <img src="images/espresso.png" alt="Espresso Macchiato">
-      <p>Espresso Macchiato</p>
-      <span>6800₮</span>
-    </article>
-    <article class="product">
-        <img src="images/espresso.png" alt="Espresso Macchiato">
-        <p>Espresso Macchiato</p>
-        <span>6800₮</span>
-      </article>
+  <div class="products-wrapper">
+    <img src="images/coffee-particle.png" alt="Coffee beans" class="coffee-particle-bg">
+    <section class="products">
+      <!-- Repeat this block for each item -->
       <article class="product">
         <img src="images/espresso.png" alt="Espresso Macchiato">
         <p>Espresso Macchiato</p>
         <span>6800₮</span>
       </article>
       <article class="product">
-        <img src="images/espresso.png" alt="Espresso Macchiato">
-        <p>Espresso Macchiato</p>
-        <span>6800₮</span>
-      </article>
-      <article class="product">
-        <img src="images/espresso.png" alt="Espresso Macchiato">
-        <p>Espresso Macchiato</p>
-        <span>6800₮</span>
-      </article>
-      <article class="product">
-        <img src="images/espresso.png" alt="Espresso Macchiato">
-        <p>Espresso Macchiato</p>
-        <span>6800₮</span>
-      </article>
-      <article class="product">
-        <img src="images/espresso.png" alt="Espresso Macchiato">
-        <p>Espresso Macchiato</p>
-        <span>6800₮</span>
-      </article>
-      <article class="product">
-        <img src="images/espresso.png" alt="Espresso Macchiato">
-        <p>Espresso Macchiato</p>
-        <span>6800₮</span>
-      </article>
-      <article class="product">
-        <img src="images/espresso.png" alt="Espresso Macchiato">
-        <p>Espresso Macchiato</p>
-        <span>6800₮</span>
-      </article>
-      <article class="product">
-        <img src="images/espresso.png" alt="Espresso Macchiato">
-        <p>Espresso Macchiato</p>
-        <span>6800₮</span>
-      </article>
-      <article class="product">
-        <img src="images/espresso.png" alt="Espresso Macchiato">
-        <p>Espresso Macchiato</p>
-        <span>6800₮</span>
-      </article>
-      <article class="product">
-        <img src="images/espresso.png" alt="Espresso Macchiato">
-        <p>Espresso Macchiato</p>
-        <span>6800₮</span>
-      </article>
-      <article class="product">
-        <img src="images/espresso.png" alt="Espresso Macchiato">
-        <p>Espresso Macchiato</p>
-        <span>6800₮</span>
-      </article>
-      <article class="product">
-        <img src="images/espresso.png" alt="Espresso Macchiato">
-        <p>Espresso Macchiato</p>
-        <span>6800₮</span>
-      </article>
-    <!-- Sold Out Example -->
-    <article class="product sold-out">
-      <img src="images/espresso.png" alt="Espresso Macchiato">
-      <p>Дууссан</p>
-      <span>Espresso Macchiato</span>
-      <span>6800₮</span>
-    </article>
-    <article class="product sold-out">
+          <img src="images/espresso.png" alt="Espresso Macchiato">
+          <p>Espresso Macchiato</p>
+          <span>6800₮</span>
+        </article>
+        <article class="product">
+          <img src="images/espresso.png" alt="Espresso Macchiato">
+          <p>Espresso Macchiato</p>
+          <span>6800₮</span>
+        </article>
+        <article class="product">
+          <img src="images/espresso.png" alt="Espresso Macchiato">
+          <p>Espresso Macchiato</p>
+          <span>6800₮</span>
+        </article>
+        <article class="product">
+          <img src="images/espresso.png" alt="Espresso Macchiato">
+          <p>Espresso Macchiato</p>
+          <span>6800₮</span>
+        </article>
+        <article class="product">
+          <img src="images/espresso.png" alt="Espresso Macchiato">
+          <p>Espresso Macchiato</p>
+          <span>6800₮</span>
+        </article>
+        <article class="product">
+          <img src="images/espresso.png" alt="Espresso Macchiato">
+          <p>Espresso Macchiato</p>
+          <span>6800₮</span>
+        </article>
+        <article class="product">
+          <img src="images/espresso.png" alt="Espresso Macchiato">
+          <p>Espresso Macchiato</p>
+          <span>6800₮</span>
+        </article>
+        <article class="product">
+          <img src="images/espresso.png" alt="Espresso Macchiato">
+          <p>Espresso Macchiato</p>
+          <span>6800₮</span>
+        </article>
+        <article class="product">
+          <img src="images/espresso.png" alt="Espresso Macchiato">
+          <p>Espresso Macchiato</p>
+          <span>6800₮</span>
+        </article>
+        <article class="product">
+          <img src="images/espresso.png" alt="Espresso Macchiato">
+          <p>Espresso Macchiato</p>
+          <span>6800₮</span>
+        </article>
+        <article class="product">
+          <img src="images/espresso.png" alt="Espresso Macchiato">
+          <p>Espresso Macchiato</p>
+          <span>6800₮</span>
+        </article>
+        <article class="product">
+          <img src="images/espresso.png" alt="Espresso Macchiato">
+          <p>Espresso Macchiato</p>
+          <span>6800₮</span>
+        </article>
+        <article class="product">
+          <img src="images/espresso.png" alt="Espresso Macchiato">
+          <p>Espresso Macchiato</p>
+          <span>6800₮</span>
+        </article>
+      <!-- Sold Out Example -->
+      <article class="product sold-out">
         <img src="images/espresso.png" alt="Espresso Macchiato">
         <p>Дууссан</p>
         <span>Espresso Macchiato</span>
         <span>6800₮</span>
       </article>
-  </section>
-
+      <article class="product sold-out">
+          <img src="images/espresso.png" alt="Espresso Macchiato">
+          <p>Дууссан</p>
+          <span>Espresso Macchiato</span>
+          <span>6800₮</span>
+        </article>
+    </section>
+  </div>
   <!-- Cart Button -->
   <div class="cart-icon">
     <a href= "cart.html">
       <img src = "images/cart-icon.png" alt="Cart">
     </a>
-  </div>div>
+  </div>
   <!--Minii Zzahialga-->
 
 
