--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <img src="images/coffee-logo.png" alt="Coffee Logo" class="logo">
       <nav>
         <ul class="nav-links">
-          <li><a href="Menu.html">Меню</a></li>
+          <li><a href="index.html">Меню</a></li>
           <li><a href="Order.html">Миний захиалга</a></li>
           <li><a href="Cart.html">Сагс</a></li>
         </ul>
