--- a/cart.html
+++ b/cart.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="products-wrapper">
-        <img src="images/coffee-b.png" alt="Coffee">
+        <img src="images/coffee-particle.png" alt="Coffee beans" class="coffee-particle-bg">
 
     <header class="header">
         <div class="logo-menu">
