--- a/cart.html
+++ b/cart.html
@@ -9,7 +9,7 @@
 <body>
     <div class="products-wrapper">
         <img src="images/coffee-particle.png" alt="Coffee beans" class="coffee-particle-bg">
-
+        <section>
     <header class="header">
         <div class="logo-menu">
           <img src="images/coffee-logo.png" alt="Coffee Logo" class="logo">
@@ -79,7 +79,8 @@
                 </button>
             </div>
         </div>
-        
+    </section>
+    </div>
         <div class="actions">
             <select>
                 <option>Цаг сонгох</option>
