connected homepage to details page, details page now supports mobile
connected homepage to details page, details page now supports mobile

--- a/index.html
+++ b/index.html
@@ -65,78 +65,84 @@
   <div class="products-wrapper">
     <img src="images/coffee-particle.png" alt="Coffee beans" class="coffee-particle-bg">
     <section class="products">
-      <!-- Repeat this block for each item -->
-      <article class="product">
-        <img src="images/espresso.png" alt="Espresso Macchiato">
-        <p>Espresso Macchiato</p>
-        <span>6800₮</span>
-      </article>
-      <article class="product">
-          <img src="images/espresso.png" alt="Espresso Macchiato">
-          <p>Espresso Macchiato</p>
-          <span>6800₮</span>
-        </article>
+      <a href="drinkDetails.html" class="product-link">
         <article class="product">
           <img src="images/espresso.png" alt="Espresso Macchiato">
           <p>Espresso Macchiato</p>
           <span>6800₮</span>
         </article>
+      </a>
+      <a href="drinkDetails.html" class="product-link">
         <article class="product">
           <img src="images/espresso.png" alt="Espresso Macchiato">
           <p>Espresso Macchiato</p>
           <span>6800₮</span>
         </article>
+      </a>
+      <a href="drinkDetails.html" class="product-link">
         <article class="product">
           <img src="images/espresso.png" alt="Espresso Macchiato">
           <p>Espresso Macchiato</p>
           <span>6800₮</span>
         </article>
+      </a>
+      <a href="drinkDetails.html" class="product-link">
         <article class="product">
           <img src="images/espresso.png" alt="Espresso Macchiato">
           <p>Espresso Macchiato</p>
           <span>6800₮</span>
         </article>
+      </a>
+      <a href="drinkDetails.html" class="product-link">
         <article class="product">
           <img src="images/espresso.png" alt="Espresso Macchiato">
           <p>Espresso Macchiato</p>
           <span>6800₮</span>
         </article>
+      </a>
+      <a href="drinkDetails.html" class="product-link">
         <article class="product">
           <img src="images/espresso.png" alt="Espresso Macchiato">
           <p>Espresso Macchiato</p>
           <span>6800₮</span>
         </article>
+      </a>
+      <a href="drinkDetails.html" class="product-link">
         <article class="product">
           <img src="images/espresso.png" alt="Espresso Macchiato">
           <p>Espresso Macchiato</p>
           <span>6800₮</span>
         </article>
+      </a>
+      <a href="drinkDetails.html" class="product-link">
         <article class="product">
           <img src="images/espresso.png" alt="Espresso Macchiato">
           <p>Espresso Macchiato</p>
           <span>6800₮</span>
         </article>
+      </a>
+      <a href="drinkDetails.html" class="product-link">
         <article class="product">
           <img src="images/espresso.png" alt="Espresso Macchiato">
           <p>Espresso Macchiato</p>
           <span>6800₮</span>
         </article>
+      </a>
+      <a href="drinkDetails.html" class="product-link">
         <article class="product">
           <img src="images/espresso.png" alt="Espresso Macchiato">
           <p>Espresso Macchiato</p>
           <span>6800₮</span>
         </article>
+      </a>
+      <a href="drinkDetails.html" class="product-link">
         <article class="product">
           <img src="images/espresso.png" alt="Espresso Macchiato">
           <p>Espresso Macchiato</p>
           <span>6800₮</span>
         </article>
-        <article class="product">
-          <img src="images/espresso.png" alt="Espresso Macchiato">
-          <p>Espresso Macchiato</p>
-          <span>6800₮</span>
-        </article>
-      <!-- Sold Out Example -->
+      </a>
+      <!-- out of stock Example -->
       <article class="product sold-out">
         <img src="images/espresso.png" alt="Espresso Macchiato">
         <p>Дууссан</p>
