fixed bg-img and delete button on cart page

--- a/cart.html
+++ b/cart.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart Page</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="cart.css">
 </head>
 <body>
-    <div class="products-wrapper">
-        <img src="images/coffee-particle.png" alt="Coffee beans" class="coffee-particle-bg">
-        <section>
+    <div class="page-container">
             <header class="header">
                 <div class="logo-menu">
                     <img src="images/coffee-logo.png" alt="Coffee Logo" class="logo">
@@ -25,7 +23,6 @@
                     <span><a href="Signup.html">Hэвтрэх</a></span>
                 </div>
             </header>
-
             <main>
                 <h2>3 items</h2>
                 <div class="cart-container">
@@ -41,7 +38,7 @@
                             <button class="increase">+</button>
                         </div>
                         <button class="delete-item">
-                            <img src="images/trash-icon.png" alt="Delete">
+                            <img src="images/Trash.png" alt="Delete">
                         </button>
                     </div>
                     <div class="cart-container">
@@ -57,7 +54,7 @@
                                 <button class="increase">+</button>
                             </div>
                             <button class="delete-item">
-                                <img src="images/trash-icon.png" alt="Delete">
+                                <img src="images/Trash.png" alt="Delete">
                             </button>
                         </div>
                         <div class="cart-container">
@@ -73,7 +70,7 @@
                                     <button class="increase">+</button>
                                 </div>
                                 <button class="delete-item">
-                                    <img src="images/trash-icon.png" alt="Delete">
+                                    <img src="images/Trash.png" alt="Delete">
                                 </button>
                             </div>
                 </div>
@@ -85,6 +82,9 @@
                     <p>Total Price: 20400₮</p>
                     <button class="btn">Төлөх</button>
                 </div>
+                <figure class="drink-image">
+                    <img src="images/cart-bg.png" alt="coffee-img-decoration" class="coffee-particle-bg"/>
+                </figure>
             </main>
 
             <footer>
@@ -104,7 +104,6 @@
                     </div>
                 </div>
             </footer>
-        </section>
     </div>
 </body>
 </html>
