small update on homepage

--- a/cart.html
+++ b/cart.html
@@ -10,7 +10,7 @@
     <div class="page-container">
             <header class="header">
                 <div class="logo-menu">
-                    <img src="images/coffee-logo.png" alt="Coffee Logo" class="logo">
+                    <a href="index.html"><img src="images/coffee-logo.png" alt="Coffee Logo" class="logo"></a>
                     <nav>
                         <ul class="nav-links">
                             <li><a href="index.html">Меню</a></li>
