--- a/drinkDetails.html
+++ b/drinkDetails.html
@@ -14,7 +14,7 @@
     <!-- Header -->
     <header class="header">
       <div class="logo-menu">
-        <img src="images/coffee-logo.png" alt="Coffee Logo" class="logo">
+        <a href="Menu.html"><img src="images/coffee-logo.png" alt="Coffee Logo" class="logo"></a>
         <nav>
           <ul class="nav-links">
             <li><a href="Menu.html">Меню</a></li>
