--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <ul class="nav-links">
           <li><a href="index.html">Меню</a></li>
           <li><a href="Order.html">Миний захиалга</a></li>
-          <li><a href="Cart.html">Сагс</a></li>
+          <li><a href="cart.html">Сагс</a></li>
         </ul>
       </nav>
     </div>
@@ -63,6 +63,7 @@
 
   <!-- Product Grid -->
   <div class="products-wrapper">
+    <h2>Онцлох бүтээгдэхүүнүүд</h2>
     <img src="images/coffee-particle.png" alt="Coffee beans" class="coffee-particle-bg">
     <section class="products">
       <a href="drinkDetails.html" class="product-link">
