homepage heading warning fixed

--- a/index.html
+++ b/index.html
@@ -69,91 +69,110 @@
       <a href="drinkDetails.html" class="product-link">
         <article class="product">
           <img src="images/espresso.png" alt="Espresso Macchiato">
-          <p>Espresso Macchiato</p>
+          <h3>Espresso Macchiato</h3>
           <span>6800₮</span>
         </article>
       </a>
       <a href="drinkDetails.html" class="product-link">
         <article class="product">
           <img src="images/espresso.png" alt="Espresso Macchiato">
-          <p>Espresso Macchiato</p>
+          <h3>Espresso Macchiato</h3>
           <span>6800₮</span>
         </article>
       </a>
       <a href="drinkDetails.html" class="product-link">
         <article class="product">
           <img src="images/espresso.png" alt="Espresso Macchiato">
-          <p>Espresso Macchiato</p>
+          <h3>Espresso Macchiato</h3>
           <span>6800₮</span>
         </article>
       </a>
       <a href="drinkDetails.html" class="product-link">
         <article class="product">
           <img src="images/espresso.png" alt="Espresso Macchiato">
-          <p>Espresso Macchiato</p>
+          <h3>Espresso Macchiato</h3>
           <span>6800₮</span>
         </article>
       </a>
       <a href="drinkDetails.html" class="product-link">
         <article class="product">
           <img src="images/espresso.png" alt="Espresso Macchiato">
-          <p>Espresso Macchiato</p>
+          <h3>Espresso Macchiato</h3>
           <span>6800₮</span>
         </article>
       </a>
       <a href="drinkDetails.html" class="product-link">
         <article class="product">
           <img src="images/espresso.png" alt="Espresso Macchiato">
-          <p>Espresso Macchiato</p>
+          <h3>Espresso Macchiato</h3>
           <span>6800₮</span>
         </article>
       </a>
       <a href="drinkDetails.html" class="product-link">
         <article class="product">
           <img src="images/espresso.png" alt="Espresso Macchiato">
-          <p>Espresso Macchiato</p>
+          <h3>Espresso Macchiato</h3>
           <span>6800₮</span>
         </article>
       </a>
       <a href="drinkDetails.html" class="product-link">
         <article class="product">
           <img src="images/espresso.png" alt="Espresso Macchiato">
-          <p>Espresso Macchiato</p>
+          <h3>Espresso Macchiato</h3>
           <span>6800₮</span>
         </article>
       </a>
       <a href="drinkDetails.html" class="product-link">
         <article class="product">
           <img src="images/espresso.png" alt="Espresso Macchiato">
-          <p>Espresso Macchiato</p>
+          <h3>Espresso Macchiato</h3>
           <span>6800₮</span>
         </article>
       </a>
       <a href="drinkDetails.html" class="product-link">
         <article class="product">
           <img src="images/espresso.png" alt="Espresso Macchiato">
-          <p>Espresso Macchiato</p>
+          <h3>Espresso Macchiato</h3>
           <span>6800₮</span>
         </article>
       </a>
       <a href="drinkDetails.html" class="product-link">
         <article class="product">
           <img src="images/espresso.png" alt="Espresso Macchiato">
-          <p>Espresso Macchiato</p>
+          <h3>Espresso Macchiato</h3>
+          <span>6800₮</span>
+        </article>
+      </a>
+      <a href="drinkDetails.html" class="product-link">
+        <article class="product">
+          <img src="images/espresso.png" alt="Espresso Macchiato">
+          <h3>Espresso Macchiato</h3>
+          <span>6800₮</span>
+        </article>
+      </a>
+      <a href="drinkDetails.html" class="product-link">
+        <article class="product">
+          <img src="images/espresso.png" alt="Espresso Macchiato">
+          <h3>Espresso Macchiato</h3>
+          <span>6800₮</span>
+        </article>
+      </a>
+      <a href="drinkDetails.html" class="product-link">
+        <article class="product">
+          <img src="images/espresso.png" alt="Espresso Macchiato">
+          <h3>Espresso Macchiato</h3>
           <span>6800₮</span>
         </article>
       </a>
       <!-- out of stock Example -->
       <article class="product sold-out">
         <img src="images/espresso.png" alt="Espresso Macchiato">
-        <p>Дууссан</p>
-        <span>Espresso Macchiato</span>
+        <h3>Espresso Macchiato</h3>
         <span>6800₮</span>
       </article>
       <article class="product sold-out">
           <img src="images/espresso.png" alt="Espresso Macchiato">
-          <p>Дууссан</p>
-          <span>Espresso Macchiato</span>
+          <h3>Espresso Macchiato</h3>
           <span>6800₮</span>
         </article>
     </section>
