--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </nav>
     </div>
     <div class="login-btn">
-      <span><a href="Signup.html">Hэвтрэх</a></span>
+      <span><a href="login.html">Hэвтрэх</a></span>
     </div>
   </header>
 
@@ -187,14 +187,23 @@
 
 
   <!-- Footer -->
-  <footer class="footer">
-    <div>
-      <h4>Бидний тухай</h4>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  <footer>
+    <div class="footer">
+        <div class="footer-section">
+            <h3>Бидний тухай</h3>
+            <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="footer-section">
+            <h3>Байршил</h3>
+            <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="footer-section">
+            <h3>Холбогдох</h3>
+            <p>+976 99999999</p>
+            <p>coffeehustle@gmail.com</p>
+        </div>
     </div>
-    <div><h4>Байршил</h4></div>
-    <div><h4>Холбогдох</h4></div>
-  </footer>
+</footer>
 </body>
 
 </html>
