create Myorder page and minor fixes

--- a/index.html
+++ b/index.html
@@ -17,13 +17,16 @@
       <nav>
         <ul class="nav-links">
           <li><a href="index.html">Меню</a></li>
-          <li><a href="Order.html">Миний захиалга</a></li>
+          <li><a href="Myorder.html">Миний захиалга</a></li>
           <li><a href="cart.html">Сагс</a></li>
         </ul>
       </nav>
     </div>
     <div class="login-btn">
-      <span><a href="login.html">Hэвтрэх</a></span>
+      <span><a href="login.html">
+        <img src="images/user.png" alt="User Icon" style="width:16px; height:16px; vertical-align:middle; margin-right:5px;">
+        Hэвтрэх
+      </a></span>
     </div>
   </header>
 
