salbar, coffeeshop, advgaa avi

--- a/ori web/menu.html
+++ b/ori web/menu.html
@@ -16,13 +16,28 @@
         </a>
         <div class="header-buttons">
             <div class="right-buttons">
+                <a href="reorder.html" id="reorder-btn"><i class="fas fa-redo"></i> Re-Order</a>
                 <button id="history-btn"><i class="fas fa-history"></i> Order History</button>
                 <button id="cart-btn"><i class="fas fa-shopping-cart"></i> Cart <span id="cart-count">0</span></button>
                 <button id="account-btn"><i class="fas fa-user"></i> Account</button>
             </div>
         </div>
     </header>
-    
+
+    <section class="filters">
+        <form class="dropdowns">
+          <label>
+            <select>
+              <option>CoffeeShop</option>
+            </select>
+          </label>
+          <label>
+            <select>
+              <option>Салбар</option>
+            </select>
+          </label>
+        </form>
+
     <div class="container">
         <div class="menu-categories">
             <button class="category-btn active" data-category="hot"><i class="fas fa-mug-hot"></i> Hot Coffee</button>
