--- a/ori web/menu.html
+++ b/ori web/menu.html
@@ -16,7 +16,7 @@
         </a>
         <div class="header-buttons">
             <div class="right-buttons">
-                <a href="reorder.html" id="reorder-btn"><i class="fas fa-redo"></i> Re-Order</a>
+                <a href="reorder.html" id="reorder-btn"><i class="fas fa-redo"></i>  Avdagaa aviy</a>
                 <button id="history-btn"><i class="fas fa-history"></i> Order History</button>
                 <button id="cart-btn"><i class="fas fa-shopping-cart"></i> Cart <span id="cart-count">0</span></button>
                 <button id="account-btn"><i class="fas fa-user"></i> Account</button>
