--- a/index.html
+++ b/index.html
@@ -5,18 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CoffeeHustlers - Coffee Pre-order</title>
     <script src="/main.js" type="module"></script>
-
-
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/main.css">
     <base href="/">
 </head>
 <body>
-  
   <nav-bar></nav-bar>
-  <div id="app">
-  </div>
-
-
+  <div id="app"></div>
   <my-footer></my-footer>
 </body>
 </html>
