--- a/index.html
+++ b/index.html
@@ -3,6 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pre-order coffee from your favorite local cafes. Skip the line and enjoy fresh brews on time.">
+    <meta name="keywords" content="coffee, pre-order, cafe, local coffee shop, Coffee Hustlers">
+    <meta name="author" content="Coffee Hustlers Team">
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Coffee Hustlers">
+    <meta property="og:description" content="Pre-order coffee from your favorite local cafes.">
+    <meta property="og:image" content="/images/coffee-logo.png">
+    <meta property="og:url" content="https://yourdomain.com/">
+    <meta name="twitter:card" content="summary_large_image">
+
+      <title>CoffeeHustlers - Coffee Pre-order</title>
+    <link rel="icon" href="/images/coffee-logo.png" type="image/png">
+    <meta name="theme-color" content="#7B3F00">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <title>CoffeeHustlers - Coffee Pre-order</title>
     <script src="/main.js" type="module"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
